--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -299,3 +299,13 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
     color:#8592a3;font-weight:normal;top:0;left:0;}
 .ys-amp.ys-amp-solo #beta{position: absolute;font-size:12px;height:44px;width:inherit;line-height: 44px;display: block;
     color:#8592a3;font-weight:normal;top:0;right:22px;left:inherit;}
+
+.ys-amp .amp-loading{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background-color:transparent;z-index:3999;}
+.ys-amp .amp-loading>.loading-wrapper{width:180px;height:120px;
+    padding-top:80px;position: absolute;top:50%;left:50%;margin-left:10px;margin-top:-100px;
+    border-radius:12px;background-color:rgba(62,70,88,0.62);}
+
+.ys-amp.ys-amp-solo>.loading-wrapper{margin-left:-90px;}
+.ys-amp .amp-loading>.loading-wrapper>.loading-ani{width:60px;height:60px;position: absolute;top:20px;left:50%;margin-left:-30px;}
+.ys-amp .amp-loading>.loading-wrapper>span{display: block;color:#fff;font-size:16px;text-align: center;height:44px;line-height: 44px;}
+
