--- a/app/views/datatools/datatool_rent_package_result.html
+++ b/app/views/datatools/datatool_rent_package_result.html
@@ -3,7 +3,8 @@
     <div class="amp-content-header">
 
         <div class="amp-header-filter clearfix">
-            <a type="button" class="btn btn-default amp-btn pull-right" ui-sref="rpgpin" href="#/rpgpin" id="btn-rpg-save">保存</a>
+            <!--<a type="button" class="btn btn-default amp-btn pull-right" ui-sref="rpgpin" href="#/rpgpin" id="btn-rpg-save">保存</a>-->
+            <a type="button" class="btn btn-default amp-btn pull-right" id="btn-rpg-save">保存</a>
         </div>
     </div><!--amp-content-header-->
     <div class="amp-block-pd">
