--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -295,7 +295,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="chart-wrapper" id="chart-rpg-wrapper" >
+                            <div class="chart-wrapper" id="chart-rpg-wrapper" style="padding-left:30px;padding-right:0;">
                                 <!--<em class="chart-axis-info chart-axis-y-info">万元</em>-->
                                 <div id="chart-rpg" style="height:310px;"></div>
                                 <div class="chart-legend">
