--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -7,7 +7,7 @@
             <li><a ui-sref="rpgset" ui-sref-active="active" href="#/rpgset" id="tri-0-1-1" class="header-subnav-item">租金包设定</a></li>
         </ul>
     </div><!--amp-content-header-->
-    <div class="amp-block-pd">
+    <div class="amp-block">
         <div class="amp-table-wrapper" id="noi-main-table-wrapper">
             <div class="ys-table-fixed-top" >
                 <table class="table table-no-bordered amp-table table-header-fixed">
@@ -48,7 +48,7 @@
                     <tr>
                         <td>B1-1</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>126.4</td>
                         <td>服装</td>
                         <td>销售</td>
@@ -56,35 +56,35 @@
                     </tr>
                     <tr>
                         <td>B1-10</td>
-                        <td></td>
-                        <td></td>
+                        <td>B1~-1</td>
+                        <td>-</td>
                         <td>42</td>
-                        <td></td>
-                        <td>销售</td>
+                        <td>-</td>
+                        <td>销售返租</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
 					<tr>
                         <td>B1-101</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>43.7</td>
                         <td>服装</td>
-                        <td>销售</td>
+                        <td>自持</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-103</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>33.7</td>
                         <td>服装</td>
-                        <td>销售</td>
+                        <td>自持</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-105</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>34.8</td>
                         <td>服装</td>
                         <td>销售</td>
@@ -93,7 +93,7 @@
                     <tr>
                         <td>B1-107</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>51.8</td>
                         <td>服装</td>
                         <td>销售</td>
@@ -102,7 +102,7 @@
                     <tr>
                         <td>B1-109</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>52.2</td>
                         <td>服装</td>
                         <td>销售</td>
@@ -111,52 +111,52 @@
                     <tr>
                         <td>B1-11/13-R</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>134.1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>销售</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-12</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>43</td>
-                        <td></td>
+                        <td>-</td>
                         <td>销售</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                    
                      <tr>
                         <td>B1-14</td>
-                        <td>B1~-1</td>
-                        <td></td>
+                         <td>B1~-1</td>
+                         <td>-</td>
                         <td>39</td>
-                        <td></td>
+                        <td>-</td>
                         <td>销售</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr> 
                     <tr>
                         <td>B1-15/17</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>129.3</td>
-                        <td></td>
+                        <td>-</td>
                         <td>销售</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                     
                     <tr>
                         <td>B1-16</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>56</td>
-                        <td></td>
-                        <td>销售</td>
+                        <td>-</td>
+                        <td>自持</td>
                         <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                     
                         <tr>
                         <td>B1-164</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>26.6</td>
                         <td>服装</td>
                         <td>销售</td>
@@ -165,7 +165,7 @@
                         <tr>
                         <td>B1-165</td>
                         <td>B1~-1</td>
-                        <td></td>
+                        <td>-</td>
                         <td>26.6</td>
                         <td>服装</td>
                         <td>销售</td>
