--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -17,7 +17,7 @@
                         <span>当月实际</span>
                         <h3>216.57</h3>
                         <span>全年预测</span>
-                        <h5>2652.32</h5>
+                        <h5>2,652.32</h5>
 
                     </td>
                     <td>
@@ -32,11 +32,11 @@
                         <span>估值日期</span>
                         <h5>2016-02-14</h5>
                         <span>预测年回报率(按估值)</span>
-                        <h5>7.7%</h5>
+                        <h5>5.82%</h5>
                     </td>
                     <td>
                         <span>本金</span>
-                        <h3>24079.79</h3>
+                        <h3>24,079.79</h3>
                         <span>到期日</span>
                         <h5>2023-09-30</h5>
                         <span>年贷款利息</span>
@@ -595,8 +595,8 @@
                                 <tr class="tr-sub">
                                     <td>84.94%</td>
                                     <td>68.24%</td>
-                                    <td class="notify">-10.45%</td>
-                                    <td class="t-split notify">-46.78%</td>
+                                    <td>-10.45%</td>
+                                    <td class="t-split">-46.78%</td>
 
                                     <td>68.53%</td>
                                     <td>85.48%</td>
@@ -644,43 +644,45 @@
                 </thead>
                 <tbody>
                 <tr class="tr-main">
-                    <th>欠费<em class="ys-icon icon-menu-down"></em></th>
-                    <td>948.76</td>
-                    <td>45.69</td>
-                    <td>84.64</td>
-                    <td>0</td>
-                    <td>818.43</td>
+                    <th>欠费(万元)<em class="ys-icon icon-menu-down"></em></th>
+                    <td>101.9</td>
+                    <td>50.5</td>
+                    <td>21.2</td>
+                    <td>23</td>
+                    <td>7.2</td>
+
                 </tr>
                 <tr class="tr-sub">
-                    <th>租金</th>
-                    <td>948.76</td>
-                    <td>45.69</td>
-                    <td>84.64</td>
-                    <td>0</td>
-                    <td>818.43</td>
+                    <th>租金(万元)</th>
+                    <td>42.7</td>
+                    <td>13.1</td>
+                    <td>4</td>
+                    <td>19.8</td>
+                    <td>5.8</td>
+
                 </tr>
                 <tr class="tr-sub">
-                    <th>物业管理费</th>
-                    <td>948.76</td>
-                    <td>45.69</td>
-                    <td>84.64</td>
-                    <td>0</td>
-                    <td>818.43</td>
+                    <th>物业管理费(万元)</th>
+                    <td>59.2</td>
+                    <td>37.4</td>
+                    <td>17.2</td>
+                    <td>3.2</td>
+                    <td>1.4</td>
+
                 </tr>
                 <tr class="tr-sub">
-                    <th>其他收入</th>
-                    <td>948.76</td>
-                    <td>45.69</td>
-                    <td>84.64</td>
+                    <th>其他收入(万元)</th>
                     <td>0</td>
-                    <td>818.43</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
                 </tr>
                 </tbody>
 
 
             </table>
         </div>
-
     </div><!--ys-block-->
     <div class="amp-block-pd clearfix">
         <div class="amp-block-title">
