--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -56,10 +56,10 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 .nav-bracket > li > a:hover .busi-icon-opt, .nav-bracket > li > a:active .busi-icon-opt,.nav-bracket > li.active > a .busi-icon-opt{background-position: -80px -22px;}
 .nav-bracket > li > a:hover .busi-icon-merchant, .nav-bracket > li > a:active .busi-icon-merchant,.nav-bracket > li.active > a .busi-icon-merchant{background-position:-80px -55px;}
 .nav-bracket > li > a:hover .busi-icon-finacial, .nav-bracket > li > a:active .busi-icon-finacial,.nav-bracket > li.active > a .busi-icon-finacial{background-position: -80px -81px;}
-.nav-bracket > li > a:hover .busi-icon-manage , .nav-bracket > li > a:active .busi-icon-manage,.nav-bracket > li.active > a .busi-icon-manage{background-position:-80px -108px;;}
+.nav-bracket > li > a:hover .busi-icon-manage , .nav-bracket > li > a:active .busi-icon-manage,.nav-bracket > li.active > a .busi-icon-manage{background-position:-80px -108px;}
 .nav-bracket > li > a:hover .busi-icon-cost, .nav-bracket > li > a:active .busi-icon-cost,.nav-bracket > li.active > a .busi-icon-cost{background-position: -80px -144px;}
 .nav-bracket > li > a:hover .busi-icon-marketing, .nav-bracket > li > a:active .busi-icon-marketing,.nav-bracket > li.active > a .busi-icon-marketing{background-position: -80px -177px;}
-.nav-bracket > li > a:hover .busi-icon-dcenter , .nav-bracket > li > a:active .busi-icon-dcenter,.nav-bracket > li.active > a .busi-icon-dcenter{background-position:-80px -209px;;}
+.nav-bracket > li > a:hover .busi-icon-dcenter , .nav-bracket > li > a:active .busi-icon-dcenter,.nav-bracket > li.active > a .busi-icon-dcenter{background-position:-80px -209px;}
 .nav-bracket > li > a:hover .busi-icon-dev, .nav-bracket > li > a:active .busi-icon-dev,.nav-bracket > li.active > a .busi-icon-dev{background-position: -80px -246px;}
 
 
