--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -1,11 +1,11 @@
 body { min-width: 1180px; /*padding-top: 70px; padding-bottom: 50px; */background-color:#fff/*#eceff4*/;
     font-size:16px;font-family:    'Helvetica Neue',"STHeitiSC-Light","Microsoft YaHei",sans-serif;}
 /* Reset the container */
-.container { width: 1080px;!important; max-width: none !important; }
+.container { width: 1080px !important; max-width: none !important; }
 *{box-sizing:border-box; /*    -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;*/}
 
 .no-select{ -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select:none; }
-a,button,.btn{ -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select:none;}
+a,button,.btn{ /*-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select:none;*/}
 a{text-decoration: none;}
 em,i,span,b,label{font-weight:normal;font-style: normal;}
 h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
@@ -83,7 +83,7 @@ a:hover, a:focus, a:active{color:#2da8cc;outline: 0;}
         background-color:#5ab46e;font-size:15px;position: relative;z-index:99;}
 .amp-btn:hover, .amp-btn:focus, .amp-btn:active,.amp-btn:active:focus, .amp-btn:active:hover{background-color: #55a865;color:#fff;}
 .amp-btn-lg{width:252px;min-width: 120px;}
-.amp-btn-lg:hover, .amp-btn-lg:focus, .amp-btn-lg:active,.amp-btn-lg:active:focus, .amp-btn-lg:active:hover{background-color:#5ab46e;;color:#fff;}
+.amp-btn-lg:hover, .amp-btn-lg:focus, .amp-btn-lg:active,.amp-btn-lg:active:focus, .amp-btn-lg:active:hover{background-color:#5ab46e;color:#fff;}
 .amp-btn-lg:before { content: ""; position: absolute; z-index: -1; top: 0; left: 0; right: 0; bottom: 0; background: #55a865;border-radius:3px;
     -webkit-transform: scale(0); transform: scale(0); -webkit-transition-property: transform; transition-property: transform;
     -webkit-transition-duration: 0.3s; transition-duration: 0.3s;
