--- a/app/static/css/main/main.css
+++ b/app/static/css/main/main.css
@@ -35,6 +35,7 @@ html,body{padding:0;min-width: 100%;min-height:650px;height:100vh;}
 #amp-projects-table tbody td.amp-pm-td>.amp-pm{position:relative;padding-left:60px;}
 #amp-projects-table .amp-pm em.ys-figure{ display: block;position: absolute;left:20px;top:-8px;width:32px;height:32px;border-radius:32px;
     background-color:#dae1e7;background-size:cover;background-repeat:no-repeat;}
+#amp-projects-table .amp-pm-info>h5{margin-bottom:5px;}
 #amp-projects-table tbody .amp-pm .t-main,#amp-projects-table tbody .amp-pm .t-sub{text-align: left;}
 
 #ys-amp-main .amp-opt-block{margin-top:50px;height:80px;padding:20px;text-align: center;}
