--- a/app/components/toolbar/noi_filter.html
+++ b/app/components/toolbar/noi_filter.html
@@ -1,5 +1,5 @@
-<div class="toolbar-block">
-    <div class="toolbar-item item-month-filter" style="padding:0;">
+<div class="toolbar-block" month-picker="" month-select="tCtrl.selectedMonth({date:date})" cur-month="tCtrl.curMonth">
+   <!-- <div class="toolbar-item item-month-filter" style="padding:0;">
         <label for="month-filter">时间</label>
         <div class="input-group date ys-datepicker" id="monthpicker">
         <span class="input-group-btn">
@@ -9,14 +9,9 @@
             <span class="input-group-btn">
             <button class="btn btn-default" type="button" id="ys-date-next"><em class="glyphicon glyphicon-arrow-right"></em></button>
         </span>
-            <!--   <span class="add-on"><i class="icon-th"></i></span>-->
+            &lt;!&ndash;   <span class="add-on"><i class="icon-th"></i></span>&ndash;&gt;
         </div>
-    </div>
+    </div>-->
 </div>
+<!--
 <script src="../components/toolbar/noi_filter.js"></script>
-<script>
-    $(document).ready(function(){
-        filters.init();
-        filters.monthSelector();
-    })
-</script>
