--- a/app/components/toolbar/noi_filter.html
+++ b/app/components/toolbar/noi_filter.html
@@ -1,4 +1,5 @@
-<div class="toolbar-block" month-picker="" month-select="tCtrl.selectedMonth({date:date})" cur-month="tCtrl.curMonth">
+<!--<div class="toolbar-block" month-picker="" month-select="tCtrl.selectedMonth({date:date})" cur-month="tCtrl.curMonth">-->
+<div class="toolbar-block" month-picker="" month-select="tCtrl.selectedMonth({date:date})" ng-model="tCtrl.curMonth">
    <!-- <div class="toolbar-item item-month-filter" style="padding:0;">
         <label for="month-filter">时间</label>
         <div class="input-group date ys-datepicker" id="monthpicker">
