--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -205,73 +205,73 @@
                             <table class="table table-no-bordered amp-table table-hover"  style="width:1500px;">
                                 <tbody>
                                 <tr class="tr-main">
-                                    <td ng-repeat="tdData in noiCtrl.incomeData[3].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.incomeData[3].values |skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td>0.00</td>
                                 </tr>
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.incomeData[0].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.incomeData[0].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.incomeData[1].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.incomeData[1].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <!-- start -->
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.incomeData[2].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.incomeData[2].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                 </tr>
 
                                 <tr class="tr-main">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[15].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[15].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td>0.00</td>
 
                                 </tr>
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[0].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[0].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[1].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[1].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[2].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[2].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
 
 
                                 </tr>
 
                                 <tr class="tr-sub tr-sub-main">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[3].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[3].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-tri">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[4].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[4].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-tri">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[5].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[5].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-tri">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[6].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[6].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
 
@@ -280,50 +280,50 @@
 
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[7].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[7].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[8].values.slice(1)"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
-                                    <td></td>
-                                </tr>
-
-                                <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[9].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[8].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
+                                </tr>
+
+                                <tr class="tr-sub">
+                                    <td ng-repeat="tdData in noiCtrl.feeData[9].values|skip:1"
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                    <td></td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[10].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[10].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|number:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[11].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[11].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[12].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[12].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[13].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[13].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[14].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[14].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
@@ -331,12 +331,12 @@
                                 </tbody>
                                 <tfoot>
                                 <tr class="tr-main">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[16].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[16].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[17].values.slice(1)"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[17].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|percentFormat}}</td>
 
                                 </tr>
