--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -63,8 +63,8 @@
             <div class="btn-wrapper pull-right" >
                 <span style="margin-right:10px;"><em class="page-index-bottom">共<i>{{dCtrl.recordsNum}}</i>条记录，当前第<i>{{dCtrl.paginator.curPageIndex}}</i>/<i>{{dCtrl.pageNum}}</i>页</em></span>
                 <div class="btn-group" role="group" aria-label="">
-                    <button type="button" class="btn btn-default" id="btn-pre-bottom" ng-click="dCtrl.paginator.prev()"  ng-class="{'btn-disabled':!dCtrl.paginator.hasPrevious() }">&lt;</button>
-                    <button type="button" class="btn btn-default" id="btn-next-bottom" ng-click="dCtrl.paginator.next()" ng-class="{'btn-disabled':!dCtrl.paginator.hasNext() }">&gt;</button>
+                    <button type="button" class="btn btn-default" id="btn-pre-bottom" ng-click="dCtrl.paginator.prev()"  ng-class="{'btn-disabled':!dCtrl.paginator.hasPrevious()}" ng-disabled="!dCtrl.paginator.hasPrevious()">&lt;</button>
+                    <button type="button" class="btn btn-default" id="btn-next-bottom" ng-click="dCtrl.paginator.next()" ng-class="{'btn-disabled':!dCtrl.paginator.hasNext() }" ng-disabled="!dCtrl.paginator.hasNext()" >&gt;</button>
                     <input type="text" value="1" class="page-num-input" ng-model="dCtrl.paginator.pageTarget">
                 </div>
 
