--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -152,7 +152,7 @@
         <div class="block clearfix">
             <div class="btn-wrapper pull-right">
                 <a class="btn btn-default amp-btn" id="btn-save" ng-click="rCtrl.save()">保存</a>
-                <a class="btn btn-default amp-btn amp-btn-reverse" id="btn-continue" ng-click="rCtrl.next()" ng-show="rCtrl.index==''">继续录入</a>
+                <a class="btn btn-default amp-btn amp-btn-reverse" id="btn-continue" ng-click="rCtrl.next()" ng-show="rCtrl.index=='' ||rCtrl.index=='new' ">继续录入</a>
             </div>
         </div>
     </div>
