--- a/app/views/datatools/datatool_rpg_set_index.html
+++ b/app/views/datatools/datatool_rpg_set_index.html
@@ -21,19 +21,19 @@
                 <tbody>
                 <tr class="tr-info-main">
                     <td>
-                        <h3>75,149.4</h3>
+                        <h3>{{sCtrl.setData[0].value | number:2}}</h3>
                     </td>
                     <td>
-                        <h3>9,590.3</h3>
+                        <h3>{{sCtrl.setData[1].value | number:2}}</h3>
                     </td>
                     <td>
-                       <h3>148.23</h3>
+                       <h3>{{sCtrl.setData[2].value | number:2}}</h3>
                     </td>
                     <td>
-                        <h3>2016-09-10</h3>
+                        <h3>{{sCtrl.setData[3].value}}</h3>
                     </td>
                     <td>
-                       <h3>53,912.5</h3>
+                       <h3>{{sCtrl.setData[4].value | number:2}}</h3>
                     </td>
                 </tr>
                 </tbody>
@@ -46,6 +46,7 @@
         </div>
     </div>
 </div><!-- contentpanel -->
+<!--
 <script src="../static/js/views/datatools/rpg_index.js"></script>
 <script>
     jQuery(document).ready(function(){
@@ -53,4 +54,5 @@
         amp_main.leftPanel_update();
     });
 </script>
+-->
 
